Handle Image error, Add Preloader

--- a/src/stylesheet/index.css
+++ b/src/stylesheet/index.css
@@ -104,3 +104,12 @@ body{
         background-position: 500px 0px;
     }
 }
+
+.Competiton-poster-loder{
+	background-color: #f6f7f8;
+	opacity: 0.3;
+    background: linear-gradient(to left , #e2bc2f, #767b91 , #e2bc2f);
+    background-size: 500px 50px;
+    animation: loader 5s infinite linear;
+
+}
